Bug 150806 - FILESAVE: Image duplicates / aspect ratio changes after ODT save (track changes involved)
Summary: FILESAVE: Image duplicates / aspect ratio changes after ODT save (track chang...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.4.2 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.6.0 target:7.5.1
Keywords: bibisected, bisected, filter:odt, regression
Depends on:
Blocks: Track-Changes-Image
  Show dependency treegraph
 
Reported: 2022-09-05 18:30 UTC by Telesto
Modified: 2023-01-26 09:32 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (79.46 KB, application/vnd.oasis.opendocument.text)
2022-09-05 18:31 UTC, Telesto
Details
screenshot of result after reload in LO 7.6 alpha0+ (124.15 KB, image/png)
2023-01-18 09:27 UTC, stragu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2022-09-05 18:30:57 UTC
Description:
Image loses aspect ration after save (track changes involved)

Steps to Reproduce:
1. Open the attached file
2. Place the cursor at the end of point 4. So after "required document"
3. CTRL+SHIFT+ARROW DOWN
4. Backspace
5. Save
6. File reload

Actual Results:
Figure 1 doesn't fit inside frame

Expected Results:
Same as original


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: dc92a4d973086ce8a6a5f75ba0f4d4c9ca05537a
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded
Comment 1 Telesto 2022-09-05 18:31:11 UTC
Created attachment 182238 [details]
Example file
Comment 2 Telesto 2022-09-05 18:36:23 UTC
Still OK in
Version: 7.0.7.0.0+ (x64)
Build ID: 626ea4e62a3e5005fe9825923a1c0c5bdb61cc08
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 3 inbaraj 2022-09-11 06:34:39 UTC

REPRODUCED

STEPS FOLLOWED:

1.open the file
2.place the cursor on the point 4.
3.shift+cntrl+arrow down
4.save 
5.backspace
6.reload
7. same as it libreoffice 7.4.0.0alpha



ENVIRONMENT:
libreoffice 7.4.0.0alpha,Linux Mint 20.2 Cinnamon.
Comment 4 stragu 2023-01-18 09:27:52 UTC
Created attachment 184741 [details]
screenshot of result after reload in LO 7.6 alpha0+

I don't see the image duplicated but I see the aspect ratio changed on reload, the deleted image shown stretched. Not showing the tracked changes does not  (which was the original summary, not sure why that was changed, Telesto?)

Version:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f1830bff71847a9c17715cff52383956719847fe
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 5 stragu 2023-01-18 09:32:59 UTC
Reproduced in 7.4:

Version: 7.4.4.2 / LibreOffice Community
Build ID: 85569322deea74ec9134968a29af2df5663baa21
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

But not in 7.3:

Version: 7.3.7.2 / LibreOffice Community
Build ID: e114eadc50a9ff8d8c8a0567d6da8f454beeb84f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 6 stragu 2023-01-18 11:10:11 UTC
Bibisected with linux-64-7.4 repo to first bad commit 0efe200e2e8bed05c698c0e1d24fd38448b39408 which points to the following core commit:

commit b578fa08a25a83abccad2386e12b707586fffb26
author	Miklos Vajna <vmiklos@collabora.com>	Wed Mar 16 15:35:50 2022 +0100
committer	Miklos Vajna <vmiklos@collabora.com>	Wed Mar 16 16:44:24 2022 +0100
tree acb70ecfc039f18b5b1ccca7bd39dc0264a3c7e6
parent 3eecde27009b74a7f3bf75809109a2367e262b09
ODT export: fix fallback svg:width/height for text frames with relative sizes
Change-Id: Iefeb43cdb141b01a732086c37186201a3fef0952
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/131662

Miklos, can you please have a look?
Comment 7 Commit Notification 2023-01-24 07:12:18 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/713493c107e6a210ef9b87d033efd0614271483a

tdf#150806 ODT export: fix fallback svg:width/height for zero layout size

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-01-25 08:35:15 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/02ae875f60a581a3b5c65c70db27b956e46457d8

tdf#150806 ODT export: fix fallback svg:width/height for zero layout size

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 stragu 2023-01-26 09:32:20 UTC
Verified fixed with:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e125e6623fa1c0f39d927bb37547ca6d1e299cb1
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

No more change in aspect ratio.

Interesting list numbering + figure reference dance between backspace, save and reload, but I will report that separately (unless you already have something of the sort, Telesto?)

Thanks everyone!